--- a/app/views/shared/_bottom_navbar.html.erb
+++ b/app/views/shared/_bottom_navbar.html.erb
@@ -1,13 +1,12 @@
 <nav class="bottom-nav">
   <%= link_to fights_path, class: "nav-item #{'nav-item-active' if current_page?(fights_path)}" do %>
     <span class="nav-icon"><i class="fa-solid fa-fan"></i></span>
-    <span class="nav-label">Fight History</span>
+    <span class="nav-label">Battle Journal</span>
   <% end %>
   <%= link_to map_path, class: "nav-item #{'nav-item-active' if current_page?(map_path)}" do %>
     <span class="nav-icon"><i class="fa-solid fa-map"></i></span>
     <span class="nav-label">My Journey</span>
   <% end %>
-
   <%= link_to user_path(current_user), class: "nav-item #{'nav-item-active' if current_page?(user_path(current_user))}" do %>
     <span class="nav-icon"><i class="fa-solid fa-user"></i></span>
     <span class="nav-label">My Profile</span>
