--- a/app/assets/stylesheets/theme1/styles.scss
+++ b/app/assets/stylesheets/theme1/styles.scss
@@ -114,17 +114,13 @@
   flex-direction: column;
   padding: 1rem;
   padding-bottom: 1.5rem;
-  gap: 0.5rem; // Space between buttons
-  overflow: auto; // Questions menu cant become bigger
+  gap: 0.5rem;
+  overflow: auto;
 
-    form {
+  form {
     flex: 1;
     display: flex;
-    min-height: 0; // Prevents flex items from overflowing
-
-    button {
-      flex: 1; // Make the button fill the form
-    }
+    min-height: 0;
   }
 }
 
@@ -226,14 +222,13 @@
   }
 }
 
-.btn-action {
+button.btn-action {
   background-color: $gray-900;
   border: 4px solid $accent-gold-glow;
   border-radius: $border-radius;
   font-weight: bold;
   color: $gray-200;
   width: 100%;
-  max-height: 100%;
   flex: 1;
   font-size: clamp(2rem, 4vw, 2rem);
   padding: 0.5rem 1.5rem;
