--- a/app/views/fights/_menu_contents.html.erb
+++ b/app/views/fights/_menu_contents.html.erb
@@ -1,9 +1,9 @@
 <%= button_to fight_fight_questions_path(@fight), params: { question_type: "random" }, data: { turbo_method: :post }, class: "btn-action" do %>
-  <i class="fa-solid fa-dice-five btn-icon"></i>
+  <%= image_tag "logos/sword.png", alt: "sword", class: "fa-solid fa-message btn-icon" %>
   <span class="btn-text">ランダム攻撃</span>
 <% end %>
 <%= button_to fight_fight_questions_path(@fight), params: { question_type: "kanji" }, data: { turbo_method: :post }, class: "btn-action" do %>
-  <i class="fa-solid fa-paintbrush btn-icon"></i>
+  <%= image_tag "logos/sword.png", alt: "sword", class: "fa-solid fa-message btn-icon" %>
   <span class="btn-text">漢字マジック</span>
 <% end %>
 <%= button_to fight_fight_questions_path(@fight), params: { question_type: "words" }, data: { turbo_method: :post }, class: "btn-action" do %>
