--- a/app/views/fights/_menu_contents.html.erb
+++ b/app/views/fights/_menu_contents.html.erb
@@ -3,14 +3,14 @@
   <span class="btn-text">ランダム攻撃</span>
 <% end %>
 <%= button_to fight_fight_questions_path(@fight), params: { question_type: "kanji" }, data: { turbo_method: :post }, class: "btn-action" do %>
-  <%= image_tag "logos/sword.png", alt: "sword", class: "fa-solid fa-message btn-icon" %>
+  <%= image_tag "logos/magic.png", alt: "magic", class: "fa-solid fa-message btn-icon" %>
   <span class="btn-text">漢字マジック</span>
 <% end %>
 <%= button_to fight_fight_questions_path(@fight), params: { question_type: "words" }, data: { turbo_method: :post }, class: "btn-action" do %>
-  <i class="fa-solid fa-message btn-icon"></i>
-  <span class="btn-text">単語マホウ</span>
+  <%= image_tag "logos/arrow.png", alt: "arrow", class: "fa-solid fa-message btn-icon" %>
+  <span class="btn-text">単語ユミヤ</span>
 <% end %>
 <%= button_to fight_fight_questions_path(@fight), params: { question_type: "grammar" }, data: { turbo_method: :post }, class: "btn-action" do %>
-  <i class="fa-solid fa-book btn-icon"></i>
+  <%= image_tag "logos/shuriken.png", alt: "shuriken", class: "fa-solid fa-message btn-icon" %>
   <span class="btn-text">文法シュリケン</span>
 <% end %>
