--- a/app/views/fights/_enemy_sprite.html.erb
+++ b/app/views/fights/_enemy_sprite.html.erb
@@ -1,1 +1,3 @@
-<%= image_tag "enemy-images/#{@fight.enemy.sprite}", alt: "Player Character", class: "enemy-sprite enemy-#{@fight.enemy.sprite.delete_suffix('.png').gsub('_', '-')}" %>
+<%= image_tag "enemy-images/#{@fight.enemy.sprite}", 
+    alt: "Enemy", 
+    class: "enemy-sprite #{'enemy-demon-boss' if @fight.story_level.map_node == 10}" %>
